--- a/viewcounter.html
+++ b/viewcounter.html
@@ -8,7 +8,7 @@
 
 <script>
 
-const SHEET_URL = "YOUR_GOOGLE_APPS_SCRIPT_URL"; 
+const SHEET_URL = "https://script.google.com/macros/s/AKfycbxLo1IKqEVNoXBCjUk3GbmJPh0EPwAlA7CzuhUhhO_Ktqmm8Sf0XUXyM8tA7JZU0aAUcQ/exec"; 
 const videoID = new URLSearchParams(window.location.search).get("id");
 
 if (!videoID) {
